infrastructure-as-code/kubernetes/applications/homarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: default
  labels:
    app: homarr
spec:
  selector:
    matchLabels:
      app: homarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/ajnart/homarr:latest
          ports:
            - containerPort: 7575
              name: homarr
          volumeMounts:
            - name: config
              mountPath: /app/data/configs
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homarr-config
      restartPolicy: Always
